@@ -122,7 +122,7 @@ public class Finder {
      * @throws RuntimeException
      */
     public static List<MetaProperty<?>> findMetaProperties(final AbstractEntity<?> entity, final String dotNotationExp) {
-        final String[] properties = dotNotationExp.split(Reflector.DOT_SPLITTER);
+        final String[] properties = laxSplitPropPathToArray(dotNotationExp);
         final List<MetaProperty<?>> metaProperties = new ArrayList<>();
         Object owner = entity;
         for (final String propertyName : properties) {
@@ -151,27 +151,18 @@ public class Finder {
      * The first part of the expression should correspond to a property in the provided entity.
      * <p>
      * The last part should correspond to a property for which meta-property is being determined.
-     *
-     * @param entity
-     * @param dotNotationExp
-     * @return
-     * @throws RuntimeException
      */
     public static MetaProperty<?> findMetaProperty(final AbstractEntity<?> entity, final String dotNotationExp) {
         final List<MetaProperty<?>> metaProperties = findMetaProperties(entity, dotNotationExp);
-        if (dotNotationExp.split(Reflector.DOT_SPLITTER).length > metaProperties.size()) {
+        if (laxSplitPropPathToArray(dotNotationExp).length > metaProperties.size()) {
             return null;
         } else {
-            return metaProperties.get(metaProperties.size() - 1);
+            return metaProperties.getLast();
         }
     }
 
     /**
      * Obtains a set of meta-properties from an entity, sorted in a natural order as defined by {@link MetaProperty}.
-     *
-     * @param entity
-     * @return
-     * @throws RuntimeException
      */
     public static SortedSet<MetaProperty<?>> getMetaProperties(final AbstractEntity<?> entity) {
         final List<Field> properties = findRealProperties(entity.getType());
@@ -457,7 +448,7 @@ public class Finder {
     }
 
     /**
-     * The same as {@link #findFieldByName(Class, String)}, but the returned tuple includes the type, where the last property or method in the {@code dotNotationExp} belongs.
+     * The same as {@link #findFieldByName(Class, CharSequence)}, but the returned tuple includes the type, where the last property or method in the {@code dotNotationExp} belongs.
      * This could a declaring type, but also the last type reached during the path traversal.
      *
      * @param type
@@ -475,7 +466,7 @@ public class Finder {
     }
 
     /**
-     * The same as {@link Finder#findFieldByName(Class, String)}, but side effect free.
+     * The same as {@link Finder#findFieldByName(Class, CharSequence)}, but side effect free.
      *
      * @param type
      * @param dotNotationExp
@@ -491,18 +482,13 @@ public class Finder {
     }
 
     /**
-     * This method is similar to {@link #findFieldByName(Class, String)}, but returns property values rather than type information.
-     *
-     * @param entity
-     * @param dotNotationExp
-     * @return
-     * @throws Exception
+     * This method is similar to {@link #findFieldByName(Class, CharSequence)}, but returns property values rather than type information.
      */
     public static <T> T findFieldValueByName(final AbstractEntity<?> entity, final String dotNotationExp) {
         if (entity == null) {
             return null;
         }
-        final String[] propNames = dotNotationExp.split(Reflector.DOT_SPLITTER);
+        final String[] propNames = splitPropPathToArray(dotNotationExp);
         Object value = entity;
         for (final String propName : propNames) {
             value = getPropertyValue((AbstractEntity<?>) value, propName);
